# hydra-pspec

./: .gitignore  3bl-example.md  README.md  config-3bl-mpi.yaml  config-scaling-test.yaml  copy_baselines.py  create_jobscript.sh  environment.yaml  example-mpi.py  example.py  jobscript.sh  jobscript.sh.template  plot_speed_up.py  pyproject.toml  run-hydra-pspec.py  scaling_tests_README.md  set_up_scaling_data.py  sys_sampler_wrapper.py
config/: py10.yml  py10_clean.yml
hydra_pspec/: __init__.py  dpss.py  lssa.py  oqe.py  plotting_functions.py  pspec.py  sys_solver.py  utils.py
npy_data/: eor_true.npy  fg_true.npy  freqs_full.npy  lsts_full.npy  sky_true.npy
scripts/: calc-vis-cov-matrices.py
scripts/scaling_tests/: create_jobscript.sh  jobscript.sh.template  plot_speed_up.py  scaling_tests_README.md
test_data/: README  README.md  config.yaml  fgmodes.npy  noise-cov.npy  plot-test-data-results.py  vis-eor-fgs.uvh5  vis-eor.uvh5
test_data/0-1/: eor-cov.npy  noise.npy
