[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
requires-python = ">= 3.8"
build-backend = "setuptools.build_meta"

[project]
name = "hydra-pspec"
description = "Gibbs sampler-based power spectrum estimation code with foreground filtering and in-painting capabilities"
authors = [
    {name="Philip Bull"},
    {name="Jacob Burba"},
    {name="Gerard Capes"},
    {name="Sohini Dutta"},
    {name="Fraser Kennedy"},
    {name="Michael J. Wilensky"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "jsonargparse",
    "matplotlib",
    "multiprocess",
    "numpy",
    "pyuvdata",
    "scipy",
    "setuptools",
    "setuptools_scm"
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "hydra_pspec/_version.py"
parentdir_prefix_version = "hydra_pspec-"
fallback_version = "0.0.0"

[tool.setuptools]
packages = ["hydra_pspec"]
py-modules = ["dpss", "utils", "oqe", "pspec", "lssa"]
